# stock-helper

./: .gitignore  DEPLOY.md  README.md  codex_stock_helper_prompt.txt  pyproject.toml
.agent-bench/input/: PROJECT_BRIEF.md
.agent-bench/policies/: ACCEPTANCE_META_RULES.md  ANTI_CHEATING_RULES.md
.agent-bench/reports/: latest.json  latest.md
.agent-bench/reports/modules/: 01-review-hardening-latest.json  01-review-hardening-latest.md  01-scan-config-strategy-latest.json  01-scan-config-strategy-latest.md  02-web-scan-candidates-latest.json  02-web-scan-candidates-latest.md  04-production-hardening-latest.json  04-production-hardening-latest.md  05-scan-pipeline-performance-latest.json  05-scan-pipeline-performance-latest.md  06-realtime-eligibility-gate-latest.json  06-realtime-eligibility-gate-latest.md
.agent-bench/scripts/: run_project_eval.sh
.github/workflows/: ci.yml
scripts/: cleardb.sh  deploy_ubuntu.sh  start.sh  test_network.sh
stock_helper/: __init__.py  app.py  config.py  db.py  indicators.py  market_calendar.py  scan_tasks.py  scanner.py  strategy.py  time_utils.py
stock_helper/data/: __init__.py  baostock_provider.py  daily_kline_cache.py  daily_kline_sources.py  multi_provider.py  realtime_provider.py  sina_provider.py  tx_provider.py
stock_helper/static/: app.js  styles.css
stock_helper/templates/: base.html  candidates.html  home.html
tests/: test_daily_kline_cache.py  test_daily_kline_sources.py  test_pipeline_performance.py  test_realtime_provider.py  test_scanner_db_app.py  test_strategy.py
